--- a/docs/uploading-new-files.ipynb
+++ b/docs/uploading-new-files.ipynb
@@ -5,7 +5,7 @@
    "id": "845df7f6-4b56-42f4-bf01-440d76da053d",
    "metadata": {},
    "source": [
-    "# Uploading new PSF models to `pandora-psf`\n",
+    "# Uploading new PSF models\n",
     "\n",
     "As we get new models for the PSF, this package requires updating. This notebook shows how to update the PSF files for the package. "
    ]
@@ -66,6 +66,10 @@
     "### Check the files\n",
     "\n",
     "Move the files you've created to the data directory for the package, and check that everything works as expected. If not, repeat the above steps.\n",
+    "\n",
+    "### Rerun the docs notebooks and push to github\n",
+    "\n",
+    "Go into the `docs` folder and rerun all the tutorials to update the figures. Add all the changes to git and push to GitHub.\n",
     "\n",
     "### Update the package\n",
     "\n",
