--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## v0.8.0
+
+- Updated to add new PRF class and instructions for generating data driven visible PRF
+
 ## v0.7.0
 
 - Updated to use new version of pandorasat and pandoraref
